overlays/td/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: td-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: td-deploy
  template:
    metadata:
      labels:
        app: td-deploy
    spec:
      containers:
        - name: td
          image: ghcr.io/mvaldes14/task-manager:20260929-192903@sha256:c5d6fc4e8364288fe227e95d3721d7422820b210ec1c4770b1e8c4efdd51f201 # {"$imagepolicy": "flux-system:td-policy"}
          ports:
            - name: td-port
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /auth/status
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: td-deploy-mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: td-deploy-mcp
  template:
    metadata:
      labels:
        app: td-deploy-mcp
    spec:
      containers:
        - name: td
          image: ghcr.io/mvaldes14/task-manager-mcp:20260929-202941@sha256:fe3b35460edff2379ac4479e62ffce399c0cbbcc3445cf32d4bdb0e34f014fd3 # {"$imagepolicy": "flux-system:td-mcp-policy"}
          ports:
            - name: td-port-mcp
              containerPort: 8080
