overlays/td/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: td-svc
spec:
  selector:
    app: td-deploy
  type: ClusterIP
  ports:
    - port: 80
      name: td-port
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: td-svc-mcp
spec:
  selector:
    app: td-deploy-mcp
  type: ClusterIP
  ports:
    - port: 80
      name: td-port-mcp
      protocol: TCP
      targetPort: 8080
