overlays/td/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: td-ingressroute
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`doit-mcp.int.mvaldes.dev`)
      services:
        - name: td-svc-mcp
          port: 80
